fixed css styling of cards to not go off screen

--- a/src/App.css
+++ b/src/App.css
@@ -80,9 +80,10 @@ body {
 
 .cards {
   display: flex;
+  flex-wrap: wrap; 
+  justify-content: center; 
   padding: 1rem;
   gap: 1rem;
-  overflow-x: auto;
 }
 
 .card {
